fix: backdrop not covering testimonials

--- a/css/styles.css
+++ b/css/styles.css
@@ -259,6 +259,7 @@ header {
   max-width: 1000px;
   position: relative;
   margin: auto;
+  z-index: -1;
 }
 
 .slide {
